--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,12 @@ body{
 h1{
     text-align: center;
 }
+h6{
+    text-align: center;
+}
 h4{
+    margin-right: auto;
+    margin-left: auto;
     text-align: right;
     padding-right: 50px;
 }
@@ -15,7 +20,11 @@ h4{
     border: 1px solid white;
     position: center;
     justify-content: center;
-    margin: 20px;
+    margin-top: 25px;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 700px;
 
 
 }
